--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,11 +35,15 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".LoginActivity"
             android:label="@string/login_title" >
+        </activity>
+
+        <activity
+            android:name=".AddNewCameraActivity"
+            android:label="@string/new_camera">
         </activity>
 
         <meta-data
